# agenthalo

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  script.sh
.github/actions/setup/: action.yaml
.github/workflows/: python.yaml
agenthalo/: config.py
agenthalo/agent/: __init__.py  agent.py  agent_client.py
agenthalo/agent/clients/: cron_job.py  telegram_bot.py  terminal.py
agenthalo/core/: token.py
agenthalo/core/tool/: __init__.py  tool.py
agenthalo/services/alchemy/: alchemy_client.py
agenthalo/services/chains/evm/: contracts.py  evm.py
agenthalo/services/chains/solana/: jupiter_client.py  solana_client.py
agenthalo/services/cookiefun/: cookiefun_client.py
agenthalo/services/exchanges/: base.py  factory.py
agenthalo/services/exchanges/jupiter/: jupiter.py
agenthalo/services/exchanges/uniswap/: uniswap_client_base.py  uniswap_client_v2.py  uniswap_client_v3.py
agenthalo/services/helius/: __init__.py  data.py  helius_client.py
agenthalo/services/portfolio/: portfolio.py  portfolio_base.py  portfolio_evm.py  portfolio_pnl.py  portfolio_solana.py
agenthalo/services/tappd/: __init__.py  keystore.py
agenthalo/tools/alchemy/: alchemy_price_history.py
agenthalo/tools/cookie/: cookie_metrics.py
agenthalo/tools/core/: get_token_address.py  get_usd_price.py
agenthalo/tools/exchanges/: execute_token_swap.py  get_token_price.py
agenthalo/tools/forecasting/: price_forecasting.py
agenthalo/tools/portfolio/: get_portfolio_balance.py
agenthalo/tools/strategy_analysis/: strategy.py
agenthalo/tools/telegram/: send_telegram_notification.py
agenthalo/utils/: file_utils.py
agents/: README.md
agents/advanced/: portfolio_price_momentum_cron.py  price_forecaster.py
agents/basic/: portfolio.py  quote.py  strategy.py  swap.py
agents/interaction/: cron.py  telegram_bot.py  terminal.py
alphaswarm/: config.py
alphaswarm/agent/: agent.py  agent_client.py
alphaswarm/agent/clients/: __init__.py  cron_job.py  telegram_bot.py  terminal.py
alphaswarm/chains/: base.py  evm.py  factory.py  sol.py
alphaswarm/core/: token.py
alphaswarm/core/llm/: __init__.py  llm_function.py  message.py
alphaswarm/exchanges/: __init__.py  base.py  factory.py
alphaswarm/exchanges/jupiter/: jupiter.py
alphaswarm/exchanges/uniswap/: uniswap.py
alphaswarm/services/: api_exception.py
alphaswarm/services/alchemy/: alchemy_client.py
alphaswarm/services/chains/: __init__.py  base.py  evm.py  factory.py  sol.py
alphaswarm/services/exchanges/: __init__.py  base.py  factory.py
alphaswarm/services/helius/: helius_client.py
alphaswarm/services/portfolio/: __init__.py  portfolio.py  portfolio_base.py  portfolio_evm.py  portfolio_pnl.py  portfolio_solana.py
alphaswarm/tools/: __init__.py  price_tool.py
alphaswarm/tools/alchemy/: __init__.py  alchemy_price_history.py
alphaswarm/tools/exchanges/: __init__.py  execute_token_swap_tool.py  get_token_price_tool.py
alphaswarm/tools/strategy_analysis/: __init__.py
alphaswarm/utils/: __init__.py  utils.py
config/: default.yaml
docs/: architecture.md  services.md  tools.md
examples/: README.md  cron.py  telegram_bot.py  terminal.py
examples/agents/: portfolio_price_momentum_cron.py  price_forecaster.py
examples/basic/: 01_quote.py  02_swap.py  03_strategy.py  strategy.py  swap.py
examples/interaction/: cron.py  telegram_bot.py  terminal.py
newtonswarm/: config.py
newtonswarm/agent/: __init__.py  agent.py  agent_client.py
newtonswarm/agent/clients/: cron_job.py  telegram_bot.py  terminal.py
newtonswarm/core/tool/: __init__.py  tool.py
newtonswarm/services/alchemy/: alchemy_client.py
newtonswarm/services/cookiefun/: cookiefun_client.py
newtonswarm/services/exchanges/: base.py  factory.py
newtonswarm/services/helius/: helius_client.py
newtonswarm/services/portfolio/: portfolio_base.py  portfolio_evm.py  portfolio_pnl.py  portfolio_solana.py
newtonswarm/services/tappd/: __init__.py
newtonswarm/tools/alchemy/: alchemy_price_history.py
newtonswarm/tools/cookie/: cookie_metrics.py
newtonswarm/tools/core/: get_token_address.py  get_usd_price.py
newtonswarm/tools/exchanges/: execute_token_swap.py  get_token_price.py
newtonswarm/tools/forecasting/: price_forecasting.py
newtonswarm/tools/portfolio/: get_portfolio_balance.py
newtonswarm/tools/strategy_analysis/: strategy.py
newtonswarm/tools/telegram/: send_telegram_notification.py
newtonswarm/utils/: file_utils.py
tests/integration/: conftest.py  test_hello.py
tests/unit/: conftest.py  test_config.py
tests/unit/chains/: test_web3_client.py
tests/unit/core/: test_token.py
tests/unit/exchanges/: factory.py
tests/unit/tools/: test_get_token_address.py
(+54 files in other folders)
